# supreme

./: .gitignore  .releaserc  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: pr_check.yml  release.yml  rust.yml
src/: commands.rs  config.rs  lib.rs  main.rs  utils.rs
src/commands/: add.rs  github_actions.rs  graphql.rs  install.rs  remove.rs  rescript.rs  run.rs  uninstall.rs  update_dependencies.rs  workspace.rs
src/templates/: .gitignore  .huskyrc
src/templates/config/: config.js  config.ts
src/templates/github_actions/: .releaserc  pr_check.yml  release.yml
src/templates/github_actions/js/: pr_check.yml  release.yml
src/templates/github_actions/release_config/: .releaserc.js  .releaserc.rs
src/templates/github_actions/rescript/: pr_check.yml  release.yml
src/templates/github_actions/rust/: pr_check.yml  release.yml
src/templates/gitignore/: .gitignore.res
src/templates/graphql/: codegen.yml  jest.config.js  package.json  tsconfig.json
src/templates/graphql/lib/: server.ts
src/templates/graphql/lib/__generated__/: graphql.d.ts
src/templates/rescript/: README.md  bsconfig.json  index.html  package.json  tailwind.config.js  webpack.config.js
src/templates/rescript/public/: index.html
src/templates/rescript/src/: App.re  App.res  index.css  index.js
src/utils/: format.rs  helpers.rs  message.rs  node.rs  npm.rs  packages.rs  pkg_json.rs  progressbar.rs  project.rs  template.rs
