[package]
name = "supreme"
version ="1.24.2"
authors = ["Rickard Natt och Dag <nattochdag@hey.com>"]
edition = "2018"
description = "A CLI tool that helps you get up an running fast"
license = "MIT"
repository = "https://github.com/opendevtools/supreme-rs"
homepage = "https://github.com/opendevtools/supreme-rs"
readme = "README.md"
keywords = ["cli", "templates", "generator", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.13"
handlebars = "4.1.0"
dialoguer = "0.8.0"
colored = "2.0.0"
include-dir-macro = "0.2"
indicatif = "0.16.2"
lazy_static = "1"
regex = "1"
confy = "0.4.0"
