[package]
name = "supreme"
version = "2.8.1"
authors = ["Rickard Natt och Dag <rickard@fastmail.se>"]
edition = "2018"
description = "A CLI tool that helps you get up an running fast"
license = "MIT"
repository = "https://github.com/opendevtools/supreme-rs"
homepage = "https://github.com/opendevtools/supreme-rs"
readme = "README.md"
keywords = ["cli", "templates", "generator", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.0.0"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
colored = "2.0.0"
include-dir-macro = "0.2"
indicatif = "0.16.2"
lazy_static = "1"
regex = "1"
confy = "0.4.0"
